coral-component-dialog/src/styles/index.styl
/**
 * Copyright 2019 Adobe. All rights reserved.
 * This file is licensed to you under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License. You may obtain a copy
 * of the License at http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software distributed under
 * the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR REPRESENTATIONS
 * OF ANY KIND, either express or implied. See the License for the specific language
 * governing permissions and limitations under the License.
 */

@require '@adobe/spectrum-css/dist/components/dialog/index.css';
@require '@adobe/spectrum-css/dist/components/dialog/multiStops/light.css';
@require '@adobe/spectrum-css/dist/components/dialog/multiStops/lightest.css';
@require '@adobe/spectrum-css/dist/components/dialog/multiStops/dark.css';
@require '@adobe/spectrum-css/dist/components/dialog/multiStops/darkest.css';

// Prevent dialog flashing on page load
coral-dialog {
  display: none;
}

// @compat
._coral-Dialog--noBackdrop {
  border: 1px solid;
}

// @compat
._coral-Dialog-closeButton {
  top: 8px;
  right: 8px;
}

// @compat
coral-dialog-footer {
  display: block;

  &:empty {
    display: none;
  }
}

._coral-Dialog-dragIcon {
  margin-top: 3px;
}

@require 'light';
@require 'lightest';
@require 'dark';
@require 'darkest';

